夜深了，洗洗睡吧!

--- a/2.变量和基本类型/总结.md
+++ b/2.变量和基本类型/总结.md
@@ -6,3 +6,74 @@
  5.函数，用于定义可供随时调用的计算单元
 
 大多数编程语言通过两种方式来进一步补充其基本特征：一是赋予程序员自定义数据类型的权力，从而实现对语言的扩展；而是将一些有用的功能封装成库函数提供给程序员。
+
+python 在程序运行时检查数据类型,与之相反，c++是一种静态数据类型语言，它的类型检查发生在编译时。
+c++语言主要的一个设计目标就是让程序员自定义的数据类型像内置类型一样好用。
+
+基本内置类型:
+	算术类型：字符、整型数、布尔值和浮点数。（简单来说就是整型和浮点型）
+	空类型： void
+
+sizeof 测试结果
+bool		1
+char		1
+wchar_t 	4
+char16_t	2
+char32_t	4
+short		2
+int		4
+long		8
+long long	8(c++11 新定义的)
+float		4
+double		8
+long double 	16
+
+内置类型的机器实现
+  大多数计算机以2的整数次幂个比特作为块来处理内存，可寻址的最小内存块成为"字节",
+存储的基本单元称为 "字(word)",它通常由几个字节组成。在C++语言中，一个字节要至少能容纳机器最基本
+字符集中的字符。大多数机器的字节由8比特构成，字则有32或64比特构成，也就是4或8字节。
+为了赋予内存中某个地址明确的含义，必须首先知道存储在该地址的数据的类型。类型决定了数据所占的比特数以及
+该如何解释这些比特的内容。
+除去布尔型和扩展的字符型之外，其他整型可以划分为带符号的和无符号的。unsigned 关键字
+如何选择类型：
+C++的设计准则之一也是尽可能地接近硬件.
+1.当明确知晓数值不可能为负时，选用无符号类型
+2.使用int 执行整数运算.
+3.在算术表达式中不要使用 char 或bool ，只有在存放字符或布尔值时才使用它们。
+4.执行浮点数运算选用double, 这是因为float 通常精度不够而且双精度浮点数和单精度浮点数的计算代价相差无几。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
